--- a/project/styles.css
+++ b/project/styles.css
@@ -1,14 +1,19 @@
+body{ 
+     background: url('https://images.pexels.com/photos/1103970/pexels-photo-1103970.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
+}
+
+
 h1{ 
     text-align:center;
-    color: #66aa99;
+    color:black;
 }
 
 .start {
     width:200px;
   padding: 30px;
-  margin: 10rem;
+  margin-top:80px;
     border:2px solid black;
-    left:100px;
+    margin-left:410px;
 }
 .message{ 
     color:red;
@@ -27,7 +32,6 @@ h1{
     flex-direction: column;
     align-items: center;
     gap:10px;
-    
 }
 
 .name-container  .name1{
